fixed footer clipping

--- a/DuploHacks 2025 Website/src/styles/Homepage.css
+++ b/DuploHacks 2025 Website/src/styles/Homepage.css
@@ -166,7 +166,7 @@
     height: 1435px;
     width: 100vw;
     background-image: url("../assets/ContactBackground.png");
-    background-size: 100%;
+    background-size: 110%;
     background-position: bottom;
 }
 
